fix some blip chat layout issues and add html async attribute

--- a/_sass/components/blip.sass
+++ b/_sass/components/blip.sass
@@ -1,6 +1,11 @@
 #blip-chat-container
-    position: sticky !important
+    position: absolute !important
+    width: 100%
+    height: 100%
 
 #blip-chat-container 
     > #blip-chat-iframe
         right: 0px !important
+        border-radius: 0px !important
+
+    
